# codex-tools

./: .gitignore  AGENTS.md  README.md  static.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  pages.yml  security.yml  workflow-hygiene.yml
crates/core/: Cargo.toml
docs/: AGENT_ENTRYPOINT.md  HOWTO.md  INSTRUCTIONS.md  PROMPT_GENERATION.md  SPECIFICATION.md
scenarios/: COMMIT_INSTRUCTIONS.md  PULL_REQUEST_INSTRUCTIONS.md
scripts/: build-pages.sh  validate-pages.sh
skills/: ARCHITECTURE_AUDIT.md  BUILD_AND_CI_REVIEW.md  DEPENDENCY_REFRESH.md  DEVELOPER_EXPERIENCE.md  DEVSECOPS_AUDIT.md  DOCUMENTATION_CONTRACTS.md  DUPLICATION_REUSE.md  PERFORMANCE_HOTSPOTS.md  RUST_IDIOMS.md  TEST_COVERAGE.md  catalog.json
