[package]
name = "personas-core"
version = "0.1.0"
edition = "2024"
default-run = "generate-catalog"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml_ng = "0.10"
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "generate-catalog"
path = "src/bin/generate_catalog.rs"

[[bin]]
name = "generate-persona-audit"
path = "src/bin/generate_persona_audit.rs"
